--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -257,6 +257,10 @@ spec:
                       to setup identity federation on the OpenShift side. Auto-generated
                       when left blank. See also the `OpenShiftoAuth` field.
                     type: string
+                  oAuthScope:
+                    description: Access Token Scope. Ignored for OpenShift due
+                      to hardcoded value 'user:full'.
+                    type: string
                   oAuthSecret:
                     description: Name of the secret set in the OpenShift `OAuthClient`
                       resource used to setup identity federation on the OpenShift
@@ -2235,6 +2239,10 @@ spec:
                       oAuthClientName:
                         description: Name of the OpenShift `OAuthClient` resource
                           used to set up identity federation on the OpenShift side.
+                        type: string
+                      oAuthScope:
+                        description: Access Token Scope. Ignored for OpenShift due
+                          to hardcoded value 'user:full'.
                         type: string
                       oAuthSecret:
                         description: Name of the secret set in the OpenShift `OAuthClient`
