--- a/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/openshift/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -165,6 +165,9 @@ spec:
                   oAuthClientName:
                     description: Name of the OpenShift `OAuthClient` resource used to setup identity federation on the OpenShift side. Auto-generated when left blank. See also the `OpenShiftoAuth` field.
                     type: string
+                  oAuthScope:
+                    description: Access Token Scope. Ignored for OpenShift due to hardcoded value 'user:full'.
+                    type: string
                   oAuthSecret:
                     description: Name of the secret set in the OpenShift `OAuthClient` resource used to setup identity federation on the OpenShift side. Auto-generated when left blank. See also the `OAuthClientName` field.
                     type: string
@@ -1578,6 +1581,9 @@ spec:
                         type: string
                       oAuthClientName:
                         description: Name of the OpenShift `OAuthClient` resource used to set up identity federation on the OpenShift side.
+                        type: string
+                      oAuthScope:
+                        description: Access Token Scope. Ignored for OpenShift due to hardcoded value 'user:full'.
                         type: string
                       oAuthSecret:
                         description: Name of the secret set in the OpenShift `OAuthClient` resource used to set up identity federation on the OpenShift side.
