--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -279,6 +279,10 @@ spec:
                         to setup identity federation on the OpenShift side. Auto-generated
                         when left blank. See also the `OpenShiftoAuth` field.
                       type: string
+                    oAuthScope:
+                      description: Access Token Scope. Ignored for OpenShift due
+                        to hardcoded value `user:full`.
+                      type: string
                     oAuthSecret:
                       description: Name of the secret set in the OpenShift `OAuthClient`
                         resource used to setup identity federation on the OpenShift
@@ -2289,6 +2293,10 @@ spec:
                         oAuthClientName:
                           description: Name of the OpenShift `OAuthClient` resource
                             used to set up identity federation on the OpenShift side.
+                          type: string
+                        oAuthScope:
+                          description: Access Token Scope. Ignored for OpenShift due
+                            to hardcoded value `user:full`.
                           type: string
                         oAuthSecret:
                           description: Name of the secret set in the OpenShift `OAuthClient`
