--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -170,6 +170,9 @@ spec:
                   oAuthClientName:
                     description: Name of the OpenShift `OAuthClient` resource used to setup identity federation on the OpenShift side. Auto-generated when left blank. See also the `OpenShiftoAuth` field.
                     type: string
+                  oAuthScope:
+                    description: Access Token Scope. Ignored for OpenShift due to hardcoded value `user:full`.
+                    type: string
                   oAuthSecret:
                     description: Name of the secret set in the OpenShift `OAuthClient` resource used to setup identity federation on the OpenShift side. Auto-generated when left blank. See also the `OAuthClientName` field.
                     type: string
@@ -1583,6 +1586,9 @@ spec:
                         type: string
                       oAuthClientName:
                         description: Name of the OpenShift `OAuthClient` resource used to set up identity federation on the OpenShift side.
+                        type: string
+                      oAuthScope:
+                        description: Access Token Scope. Ignored for OpenShift due to hardcoded value `user:full`.
                         type: string
                       oAuthSecret:
                         description: Name of the secret set in the OpenShift `OAuthClient` resource used to set up identity federation on the OpenShift side.
