--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -280,8 +280,8 @@ spec:
                         when left blank. See also the `OpenShiftoAuth` field.
                       type: string
                     oAuthScope:
-                      description: Access Token Scope. Ignored for OpenShift due
-                        to hardcoded value `user:full`.
+                      description: Access Token Scope. Ignored for OpenShift due to
+                        hardcoded value `user:full`.
                       type: string
                     oAuthSecret:
                       description: Name of the secret set in the OpenShift `OAuthClient`
@@ -2295,8 +2295,8 @@ spec:
                             used to set up identity federation on the OpenShift side.
                           type: string
                         oAuthScope:
-                          description: Access Token Scope. Ignored for OpenShift due
-                            to hardcoded value `user:full`.
+                          description: Access Token Scope. Ignored for OpenShift due to
+                            hardcoded value `user:full`.
                           type: string
                         oAuthSecret:
                           description: Name of the secret set in the OpenShift `OAuthClient`
