--- a/.ci/openshift-ci/Dockerfile
+++ b/.ci/openshift-ci/Dockerfile
@@ -16,7 +16,7 @@ FROM registry.ci.openshift.org/openshift/release:golang-1.16
 
 SHELL ["/bin/bash", "-c"]
 
-# Install yq, kubectl, chectl cli used by olm/olm.sh script.
+# Install yq, kubectl, chectl cli.
 RUN yum install --assumeyes -d1 python3-pip  httpd-tools && \
     pip3 install --upgrade setuptools && \
     pip3 install yq && \
