--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -905,16 +905,6 @@ spec:
                   dashboard:
                     description: Configuration settings related to the Dashboard used by the Che installation.
                     properties:
-                      HeaderMessage:
-                        description: Dashboard header message.
-                        properties:
-                          show:
-                            description: Instructs dashboard to show the message.
-                            type: boolean
-                          warning:
-                            description: Warning message displayed on the user dashboard.
-                            type: string
-                        type: object
                       deployment:
                         description: Deployment override options.
                         properties:
@@ -986,6 +976,16 @@ spec:
                                 format: int64
                                 type: integer
                             type: object
+                        type: object
+                      headerMessage:
+                        description: Dashboard header message.
+                        properties:
+                          show:
+                            description: Instructs dashboard to show the message.
+                            type: boolean
+                          warning:
+                            description: Warning message displayed on the user dashboard.
+                            type: string
                         type: object
                     type: object
                   database:
